force-app/main/default/objects/Named_Space_Donor__c/Named_Space_Donor__c.object-meta.xml
<CustomObject>
    <label>Named Space Donor</label>
    <nameField>
        <displayFormat>NSD-{0000000}</displayFormat>
        <label>Named Space Donor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Named Space Donors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>