force-app/main/default/objects/Named_Space_Donor__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Named Space Donors</relationshipLabel>
    <relationshipName>Named_Space_Donors_Consituent</relationshipName>
    <type>Lookup</type>
</CustomField>