force-app/main/default/objects/Named_Space_Donor__c/fields/Named_Space__c.field-meta.xml
<CustomField>
    <fullName>Named_Space__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Named Space</label>
    <referenceTo>Named_Space__c</referenceTo>
    <relationshipLabel>Named Space Donors</relationshipLabel>
    <relationshipName>Named_Space_Donors_Named_Space</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>