force-app/main/default/objects/Named_Space_Donor__c/fields/Named_Space_Actual_Location__c.field-meta.xml
<CustomField>
    <fullName>Named_Space_Actual_Location__c</fullName>
    <formula>Named_Space__r.Actual_Location__c</formula>
    <label>Named Space Actual Location</label>
    <type>Text</type>
</CustomField>