force-app/main/default/objects/Named_Space_Donor__c/fields/Named_Space_Formal_Title__c.field-meta.xml
<CustomField>
    <fullName>Named_Space_Formal_Title__c</fullName>
    <formula>Named_Space__r.Formal_Title__c</formula>
    <label>Named Space Formal Title</label>
    <type>Text</type>
</CustomField>