force-app/main/default/objects/Named_Space_Donor__c/fields/Named_Space_Location__c.field-meta.xml
<CustomField>
    <fullName>Named_Space_Location__c</fullName>
    <formula>Named_Space__r.Named_Space_Location__r.Name</formula>
    <label>Named Space Location</label>
    <type>Text</type>
</CustomField>