force-app/main/default/objects/Named_Space_Donor__c/fields/Named_Space_Type__c.field-meta.xml
<CustomField>
    <fullName>Named_Space_Type__c</fullName>
    <formula>TEXT(Named_Space__r.Type__c)</formula>
    <label>Named Space Type</label>
    <type>Text</type>
</CustomField>