force-app/main/default/objects/Named_Space_Donor__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Agency, Association, Constituent Related Family Foundation, Corporate Foundation, Corporation, Donor Advised Fund, Educational/Governmental Organization, Estate, Iowa State University Units, Private Foundation, Public Charity, Reseller, Trust</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Named Space Donors</relationshipLabel>
    <relationshipName>Named_Space_Donors_Organization</relationshipName>
    <type>Lookup</type>
</CustomField>