force-app/main/default/objects/Named_Space_Donor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Named_Space_Formal_Title__c</columns>
    <columns>Constituent__c</columns>
    <columns>Organization__c</columns>
    <columns>Named_Space_Location__c</columns>
    <columns>Named_Space_Actual_Location__c</columns>
    <columns>Named_Space__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>